cargo-features = ["resolver"]

[workspace]
resolver = "2"

members = [
	"bin/node/cli",
    "bin/node/runtime",
    "bin/node/runtime-common",
    "frame/nft",
    "frame/realis-game-api",
    "frame/staking-pool",
    "primitives/realis",
    "frame/realis-game-api/rpc",
    "frame/realis-game-api/rpc/runtime-api",
]

# Override `node-runtime` dependency in `node-executor` dependencies with our local forked version.
# `node-executor` is a dependecy of a `node-cli` at `bin/node/cli`.
[patch.'https://github.com/paritytech/substrate']
node-cli = { path = "bin/node/cli" }
node-runtime = { path = "bin/node/runtime" }
runtime-common = { path = "bin/node/runtime-common" }
pallet-staking = { path = "frame/staking-pool" }
pallet-nft = { path = "frame/nft" }
realis-game-api-rpc-runtime-api = {path = "frame/realis-game-api/rpc/runtime-api"}

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"
