cargo-features = ["resolver"]

[workspace]
resolver = "2"

members = [
    "node/cli",
    "node/runtime",
    "node/service",
    "node/client",
    "rpc",
#    "primitives/realis",
#    "frame/nft",
#    "frame/nft-delegate",
#    "frame/realis-game-api",
#    "frame/staking-pool",
#    "frame/realis-bridge",
#    "frame/marketplace"
]

# Override `node-runtime` dependency in `node-executor` dependencies with our local forked version.
# `node-executor` is a dependecy of a `node-cli` at `bin/node/cli`.
[patch.'https://github.com/RealisNetwork/substrate']
node-cli = { path = "node/cli" }
node-runtime = { path = "node/runtime" }
pallet-staking = { path = "frame/staking-pool" }
pallet-nft = { path = "frame/nft" }
pallet-nft-delegate = { path = "frame/nft-delegate" }
realis-bridge = {path = "frame/realis-bridge"}

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"
