[package]
name = "realis-primitives"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.9.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
sp-runtime = { version = '3.0', default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "primitive-types/std",
]
