[package]
name = "pallet-ethereum"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
pallet-evm = { version = "0.0.1", default-features = false, path = "../evm" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
realis-primitives = { version = "0.0.2", default-features = false, path = "../../primitives" }
evm = { version = "0.27.0", features = ["with-codec"], default-features = false }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
sha3 = { version = "0.8", default-features = false }
fp-consensus = { version = "0.1.0", path = "../../primitives/consensus", default-features = false }
fp-rpc = { version = "2.0.0", path = "../../primitives/rpc", default-features = false }
fp-storage = { version = "1.0.1", path = "../../primitives/storage", default-features = false}
rlp = { version = "0.5", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f"}


[dev-dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"rlp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"realis-primitives/std",
	"ethereum/std",
	"ethereum-types/std",
	"sha3/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-storage/std",
	"evm/std",

]