[package]
name = "marketplace"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.3.0', default-features = false, features = ['derive'] }
primitive-types = { version = "0.10.1", default-features = false }
serde = { version = "1.0.133", default-features = false }
serde_json = { version = "1.0.74", default-features = false }
pallet-staking = { version = "4.0.0-dev",  path="../staking-pool", default-features = false }

frame-benchmarking = { git = "https://github.com/RealisNetwork/substrate", branch = "master", version = "4.0.0-dev", default-features = false, optional = true }
frame-support = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/RealisNetwork/substrate", branch = "master" }
node-primitives = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }

realis-primitives = { path = "../../primitives/realis", default-features = false }
pallet-nft = { version = "0.0.2", path = "../nft", default-features = false }
#realis-game-api = { path = "../realis-game-api", default-features = false }

[dev-dependencies]
node-primitives = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/RealisNetwork/substrate", branch = "master", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "sp-std/std",
    "node-primitives/std",
    "realis-primitives/std",
    "pallet-nft/std",
    "sp-core/std",
    "sp-io/std",
    "serde_json/std"
#    "realis-game-api/std"
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]

