[package]
name = "pallet-nft-delegate"
version = "0.0.1"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
realis-primitives = { path = "../../primitives/realis", default-features = false }
pallet-nft = { version = "0.0.2", path = "../nft", default-features = false }
pallet-staking = { version = "0.0.2",  path="../staking-pool", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "e7b93e1b1abcf0865824c68d10850bbb451e295f", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "e7b93e1b1abcf0865824c68d10850bbb451e295f", default-features = false }
node-primitives = { git = "https://github.com/paritytech/substrate", rev = "e7b93e1b1abcf0865824c68d10850bbb451e295f", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "e7b93e1b1abcf0865824c68d10850bbb451e295f", default-features = false }


codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }


[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-staking/std",

    "pallet-nft/std",
    "realis-primitives/std",
]