[package]
name = "pallet-nft-delegate"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
scale-info = "1.0.0"
pallet-nft = { version = "0.0.2", path = "../nft", default-features = false }
pallet-staking = { version = "4.1.0-dev",  path="../staking-pool", default-features = false }
realis-primitives = { path = "../../primitives/realis", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", version = "4.0.0-dev", default-features = false, optional = true }
node-primitives = { git = "https://github.com/paritytech/substrate", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", default-features = false }




[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "pallet-nft/std",
    "pallet-staking/std",
    "realis-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "node-primitives/std",
    "sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
