[package]
name = "pallet-nft-delegate"
version = "0.0.1"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
realis-primitives = { path = "../../primitives/realis", default-features = false }
pallet-nft = { version = "0.0.2", path = "../nft", default-features = false }
pallet-staking = { version = "4.0.0-dev",  path="../staking-pool", default-features = false }

frame-support = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-benchmarking = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", version = "4.0.0-dev", default-features = false, optional = true }
node-primitives = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-std = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }


codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }


[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-staking/std",
    "frame-benchmarking/std",
    "pallet-nft/std",
    "realis-primitives/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
